css/style.css
/* The Universal Selector */
*, /* All elements*/
*::before, /* All ::before pseudo-elements */
*::after { /* All ::after pseudo-elements */
  /* height & width will now include border & padding by default
     but can be over-ridden as needed */
  box-sizing: inherit;
}

html {
  scroll-behavior: smooth;
}

body{
  --heading-color: #66bfbf;
  --bg-color: #e4f9f5;
  --light-dark-btn-content: "Dark Mode";
  --inverted-btn-text-color: #eaeaea;
  --light-dark-btn-bg: #1d1e2b;
  --text-color: #22232b;
  background-color: var(--bg-color);
  font-family: 'Merriweather', serif;
}

h1 {
  font-family: 'Sacramento', cursive;
  font-size: 5.625rem;
  margin: 50px auto 0 auto;
  color: var(--heading-color);
}

h2 {
  font-size: 2.5rem;
  color: var(--heading-color);
}

h2,
h3 {
  font-family: 'Montserrat', sans-serif;
  color: var(--heading-color);
  font-weight: bolder;
}

.body-text {
  color: var(--text-color);
}

.navbar {
  position: fixed;
  display: flex;
  height: 60px;
  background-color: #40514E;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  z-index: 2;
}  

.nav-list {
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  padding-top: 15px;
}

.nav-list .list-item {
  display: inline-block;
  margin:  0 10px;
}

.navbar a {
  color: #eaeaea;
  text-decoration: none;
}

.navbar-logo-ltdrk {
  display: flex;
  justify-content: center;
  justify-items: flex-start;
  align-items: center;
  flex-direction: row;
}

#resume-download-btn {
  border-color: var(--heading-color);
  border-style: solid;
  border-width: 2px;
  border-radius: 5px;
  padding: 5px;
}

#resume-download-btn-small {
  display: none;
}

.page-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 50vh;
  padding-top: 60px;
}

.landing-h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.landing-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.about-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 20px 0;
}

.about-img {
  grid-column: 3/4;
  grid-row: 2/3;
  height: 200px;
  width: 200px;
}

.about-info {
  display: flex;
  justify-content: center;
  align-items: center;
  
}

.about-p {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  max-width: 80ch;
  margin: 0 20px;
}

.skills-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.skills-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.skill-svg {
  color: var(--text-color);
}

.work-container {
  padding-top: 150px;
}

.work-h2 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.card {
  margin: 10px;
  color: #22232b;
  transition: all .2s ease-in-out;
}

.card:hover {
  transform: scale(1.05);
}

.card-img-top {
  max-width: 100%;
  max-height: 50%;
}

.card-body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#card-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
	width: 100%;
}

.resume-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 60vh;
  padding-top: 150px;
}

.resume-div {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding-top: 250px;
}

.resume-h2 {
  margin-top: -400px;
}

.contact-h2 {
  margin-top: -300px;
}

.contact-me {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-btn {
  background: #11cdd4;
  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: 'Montserrat', sans-serif;
  color: #ffffff;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}

.contact-btn:hover {
  background: #30e3cb;
  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
  text-decoration: none;
  color: #ffffff;
}

.hidden-contact-btns {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px;
}

.hidden-btn {
  margin: 0 2px;
}

.copyright-btn {
  color: var(--text-color);
  text-decoration: none;
  background-color: var(--bg-color);
  border: none;
}

#light-dark-button {
  margin-left: 10px;
  border-radius: 5px;
  background-color: var(--light-dark-btn-bg);
}

#light-dark-button::after {
  border: none;
  color: var(--inverted-btn-text-color);
  content: var(--light-dark-btn-content);
}

body.dark {
  --bg-color: #22232b;
  --btn-text-color: #eaeaea;
  --inverted-btn-text-color: #eaeaea;
  --light-dark-btn-content: "Light Mode";
  --text-color: #eaeaea;
  background-color: var(--bg-color);
}

.dark-light-btn {
  margin-right: 50;
}

.btn-primary {
  background-color: darkcyan;
  border-color: darkcyan;
}

.btn-primary:hover {
  background-color: #11cdd4;
  border-color: #11cdd4;
}

.btn-secondary {
  background-color: slategray;
  border-color: slategray;
}

@media only screen and (max-width: 768px) {
  h3 {
    margin: 0 30px;
    text-align: center;
  }
  .page-container {
    min-height: 30vh;
  }

  .navbar {
    height: 80px;
  }

  .nav-list {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    padding-top: 15px;
  }
  

  
  .navbar a {
    color: #eaeaea;
    text-decoration: none;
  }
  
  .logo-img {
    height: 30px;
    width: 30px;
  }
  
  .about-p {
    margin: 0 50px;
  }
  
  .skills-icons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  .skill-svg {
    display: flex;
    margin: 20px auto;
  }
  
  .work-container {
    margin-top: -20px;
  }
  
  
  .list-item {
    font-size: small;
  }
  
  .copyright {
    margin-top: 10px;
  }

}

@media only screen and (max-width: 400px) {
  .navbar {
    height: 80px;
    margin-bottom: 50px;
  }

  .nav-list {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    padding-top: 15px;
    padding-bottom: 100px;
  }

  #resume-download-btn {
    display: none
  }

  #resume-download-btn-small {
    border-color: #40514E;
    border-style: solid;
    border-width: 2px;
    border-radius: 5px;
    padding: 5px;
    margin: 15px;
    display: inline-block;
    color: #40514E;
    text-decoration: none;
  }
}

